# calculator

./: .gitignore
calculator-cli/: calculator.py  pyproject.toml  solver.py  test_calculator.py
calculators/: Calculators.sln
calculators/ConsoleCalculator/: BasicCalculatorProgram.cs  ConsoleCalculator.cs  ConsoleCalculator.csproj  ExtendedCalculatorProgram.cs  ICalculatorProgram.cs
